Fixed login form on mobile

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -278,7 +278,7 @@ nav a:hover {
 	margin: 0 auto;
 	margin-bottom: 10px;
 	width: 150px;
-	height: 150px;
+	height: 370px;
 	font-size: 12pt;
 }
 #content h1, #editUser h1 {
